--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "@types/node": "11.9.4",
     "@types/react": "16.8.3",
     "@types/react-dom": "16.8.2",
+    "antd": "^3.13.3",
+    "antd-mobile": "^2.2.8",
+    "babel-plugin-import": "^1.11.0",
+    "customize-cra": "^0.2.11",
     "react": "^16.8.2",
+    "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^3.6.0",
     "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": "react-app"
