--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "@types/jest": "24.0.6",
     "@types/node": "11.9.4",
     "@types/react": "16.8.3",
     "@types/react-dom": "16.8.2",
+    "@types/react-jss": "^8.6.2",
+    "@types/react-router-config": "^1.1.1",
+    "@types/react-router-dom": "^4.3.1",
     "antd": "^3.13.3",
-    "antd-mobile": "^2.2.8",
+    "antd-mobile": "^2.2.9",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.11",
+    "http-proxy-middleware": "^0.19.1",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "react": "^16.8.2",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.2",
+    "react-jss": "^8.6.1",
+    "react-router": "^4.3.1",
+    "react-router-config": "^4.4.0-beta.6",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
